--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.3.0",
     "eslint": "^8.57.0",
     "formik": "^2.4.6",
+    "jspdf": "^2.5.2",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
